--- a/ODE_oct1.Rmd
+++ b/ODE_oct1.Rmd
@@ -94,12 +94,15 @@ full_equations <-function(t, state, parameters) {
 
 
 ```{r ode1}
-out <- ode(y = state, times = seq(0,100,0.1), func = full_equations, parms = parameters, maxsteps = 1e6)
+out <- ode(y = state, times = seq(0,100,0.1), func = full_equations, parms = parameters)
 ## out2 <- ode(y = state, times = seq(0,0.4,0.001), func = full_equations, parms = parameters, maxsteps=1e5)
 plot(out)
 out_med <- ode(y = state, times = seq(0,42,0.1), func = full_equations, parms = parameters)
 plot(out_med)
 ```
+
+
+
 
 Upper bound of predictions
 ```{r upper}
@@ -156,7 +159,7 @@ out_low <- ode(y = state, times = seq(0,42,0.1), func = full_equations, parms = 
 
 For graphing
 
-```{r}
+```{r graph ammonium and algae}
 pred <- as.data.frame(out_low)
 pred$quantile <- "low"
 predup <- as.data.frame(out_up)
@@ -165,13 +168,14 @@ predmed <- as.data.frame(out_med)
 predmed$quantile <- "med"
 
 source("treatments.R")
-
-dat_daph <- dat %>% filter(treatment == 3) %>% filter(NH4 < 20)%>% 
-  filter(Chl < 100, Chl >= 0) %>% select(TankNum, NH4, Chl,Day)
+source("fix_chl.R")
+# the filter remves 3 points at 60 which have to be wrong...all on the same day
+dat_daph <- newdat %>% filter(treatment == 3) %>% filter(NH4 < 20)%>%  
+   dplyr::select(TankNum, NH4, Chl,Day)
 names(dat_daph) <- c("TankNum", "ammonium","algae","time")
-amm_g <- ggplot(predmed, aes(time,ammonium)) + geom_line(linetype = "solid")+ 
+amm_g <- ggplot(predmed, aes(time,ammonium)) + geom_line(linetype = "solid") + 
   #geom_line(data= predup, linetype = "dotdash") +
-  geom_line(data=pred, linetype ="dotdash")+
+  #geom_line(data=pred, linetype ="dotdash")+
   theme_bw()+ geom_point(data = dat_daph,aes(time,ammonium) )+
   ylab("Ammonium mg/L")+xlab("Days")+
   theme(axis.text.x = element_text(size = 30),
@@ -185,7 +189,7 @@ amm_g <- ggplot(predmed, aes(time,ammonium)) + geom_line(linetype = "solid")+
 
 
 alg_g <- ggplot(predmed, aes(time,algae)) + geom_line(linetype = "solid")+ 
-  geom_line(data= predup, linetype = "dotdash") + geom_line(data=pred, linetype ="dotdash")+
+  #geom_line(data= predup, linetype = "dotdash") + geom_line(data=pred, linetype ="dotdash")+
   theme_bw()+ geom_point(data = dat_daph,aes(time,algae) )+
   ylab("Chl a ug/L")+xlab("Days")+
   theme(axis.text.x = element_text(size = 30),
@@ -199,5 +203,42 @@ alg_g <- ggplot(predmed, aes(time,algae)) + geom_line(linetype = "solid")+
 
 ```
 
+```{r graph daphnia}
+source("pop_curves.R")
+adult <- popA %>% filter(treatment == 3) %>% group_by(TankNum,ExptDay) %>%
+  summarize(pop_mean = mean(count)*(mean(Liters)/.01)) %>% dplyr::select(TankNum, ExptDay, pop_mean)
+names(adult) <- c("TankNum", "time","daph_a")
 
+juv <- popJ %>% filter(treatment == 3) %>% group_by(TankNum,ExptDay) %>%
+  summarize(pop_mean = mean(count)*(mean(Liters)/.01))
+names(juv) <- c("TankNum","time","daph_j")
+
+ad_graph <- ggplot(predmed, aes(time,daph_a)) + geom_line(linetype = "solid")+ 
+  #geom_line(data= predup, linetype = "dotdash") + geom_line(data=pred, linetype ="dotdash")+
+  theme_bw()+ geom_point(data = adult,aes(time,daph_a) )+
+  ylab("Adult Daphnia")+xlab("Days")+
+  theme(axis.text.x = element_text(size = 30),
+        axis.text.y = element_text(size = 32),
+        axis.title.x = element_text(size = 30),
+        axis.title.y = element_text(size = 32),
+        strip.text = element_text(size = 0),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        strip.background = element_blank()) 
+
+juv_graph <- ggplot(predmed, aes(time,daph_j)) + geom_line(linetype = "solid")+ 
+  #geom_line(data= predup, linetype = "dotdash") + geom_line(data=pred, linetype ="dotdash")+
+  theme_bw()+ geom_point(data = juv,aes(time,daph_j) )+
+  ylab("Adult Daphnia")+xlab("Days")+
+  theme(axis.text.x = element_text(size = 30),
+        axis.text.y = element_text(size = 32),
+        axis.title.x = element_text(size = 30),
+        axis.title.y = element_text(size = 32),
+        strip.text = element_text(size = 0),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        strip.background = element_blank())
+
+
+```
 
